# image-processor

./: CMakeLists.txt  README.md  binary  bmp.cpp  bmp.h  controller.cpp  controller.h  exceptions.h  image.h  image_processor.cpp  io.h  parser.cpp  parser.h  text.h
fabrics/: base_fabric.cpp  base_fabric.h  crop_fabric.cpp  crop_fabric.h  edge_fabric.cpp  edge_fabric.h  gray_scale_fabric.cpp  gray_scale_fabric.h  negative_fabric.cpp  negative_fabric.h  sharpening_fabric.cpp  sharpening_fabric.h  temp_point_fabric.cpp  temp_point_fabric.h
filters/: base_filter.cpp  base_filter.h  crop.cpp  crop.h  edge.cpp  edge.h  gray_scale.cpp  gray_scale.h  negative.cpp  negative.h  sharpening.cpp  temp_point.cpp  temp_point.h
